# detect_ros

./: README.md
detect1_ws/devel/lib/object_detector/: object_detection_node
detect1_ws/devel/lib/result_viewer/: result_viewer_node
detect1_ws/devel/lib/video_publisher/: video_publisher_node
detect1_ws/devel/share/object_detector/cmake/: object_detectorConfig.cmake
detect1_ws/devel/share/video_publisher/cmake/: video_publisherConfig.cmake
detect1_ws/src/detection_launch/launch/: detection.launch
detect1_ws/src/object_detector/: CMakeLists.txt  package.xml
detect1_ws/src/object_detector/src/: object_detection_node.cpp
detect1_ws/src/result_viewer/src/: result_viewer_node.cpp
detect1_ws/src/video_publisher/src/: video_publisher_node.cpp
detect2_ws/devel/lib/object_detector/: object_detection_node
detect2_ws/devel/lib/pkgconfig/: video_publisher.pc
detect2_ws/devel/lib/result_viewer/: result_viewer_node
detect2_ws/devel/lib/video_publisher/: video_publisher_node
detect2_ws/devel/share/detection_launch/cmake/: detection_launchConfig.cmake
detect2_ws/devel/share/result_viewer/cmake/: result_viewerConfig.cmake
detect2_ws/src/detection_launch/launch/: detection.launch
detect2_ws/src/object_detector/src/: object_detection_node.cpp
detect2_ws/src/result_viewer/: CMakeLists.txt
detect2_ws/src/result_viewer/src/: result_viewer_node.cpp
detect2_ws/src/video_publisher/: CMakeLists.txt
detect2_ws/src/video_publisher/src/: video_publisher_node.cpp
detect3_ws/devel/lib/object_detector/: object_detection_node
detect3_ws/devel/lib/pkgconfig/: detection_launch.pc  object_detector.pc  result_viewer.pc
detect3_ws/devel/lib/result_viewer/: result_viewer_node
detect3_ws/devel/lib/video_publisher/: video_publisher_node
detect3_ws/devel/share/object_detector/cmake/: object_detectorConfig.cmake
detect3_ws/src/object_detector/: CMakeLists.txt
detect3_ws/src/object_detector/src/: object_detection_node.cpp
detect3_ws/src/result_viewer/: CMakeLists.txt
detect3_ws/src/result_viewer/src/: result_viewer_node.cpp
detect3_ws/src/video_publisher/: CMakeLists.txt
detect4_ws/devel/: .catkin  setup.fish
detect4_ws/devel/lib/object_detector/: object_detection_node
detect4_ws/devel/lib/pkgconfig/: object_detector.pc
detect4_ws/devel/lib/result_viewer/: result_viewer_node
detect4_ws/devel/lib/video_publisher/: video_publisher_node
detect4_ws/devel/share/detection_launch/cmake/: detection_launchConfig.cmake
detect4_ws/devel/share/object_detector/cmake/: object_detectorConfig.cmake
detect4_ws/devel/share/result_viewer/cmake/: result_viewerConfig.cmake
detect4_ws/devel/share/video_publisher/cmake/: video_publisherConfig.cmake
detect4_ws/src/detection_launch/: CMakeLists.txt  package.xml
detect4_ws/src/detection_launch/launch/: detection.launch  detection2.launch
detect4_ws/src/object_detector/: CMakeLists.txt
detect4_ws/src/object_detector/include/object_detector/: object_detection_node.hpp
detect4_ws/src/object_detector/src/: object_detection_node.cpp
detect4_ws/src/result_viewer/: CMakeLists.txt  package.xml
detect4_ws/src/result_viewer/include/result_viewer/: result_viewer_node.hpp
detect4_ws/src/result_viewer/src/: result_viewer_node.cpp
detect4_ws/src/video_publisher/: CMakeLists.txt
detect4_ws/src/video_publisher/include/video_publisher/: video_publisher_node.hpp
detect4_ws/src/video_publisher/src/: video_publisher_node.cpp
